all new changes

--- a/index.html
+++ b/index.html
@@ -11,13 +11,11 @@
   <div class="header">
     <header>
       <h1>
-        <a class="logo" href="index.html">Winny Li Design</a>
+        <a class="logo" href="index.html">Winny Li</a>
       </h1>
       <nav>
         <ul>
-          <li class="current"><a href="index.html">home</a></li>
-          <li><a href="design/design.html">design</a></li>
-          <li><a href="illustration/illustration.html">illustration</a></li>
+          <li class="current"><a href="index.html">work</a></li>
           <li><a href="about/about.html">about</a></li>
           <li><a href="contact/contact.html">contact</a></li>
         </ul>
@@ -52,7 +50,7 @@
           <p>#stamp design</p>
         </div>
         <div class="projectcard">
-          <img src="images/test.png" 
+          <img src="images/Postcard1.jpg" 
                alt="DID poster turned hourglass image for testing."/>
           <p class="title">Dissociative Identity Disorder</p>
           <p>#poster design</p>
