--- a/about/about.html
+++ b/about/about.html
@@ -13,7 +13,7 @@
       
       <nav>
         <ul>
-          <li><a href="../index.html">home</a></li>
+          <li><a href="../index.html">work</a></li>
           <li class="current"><a href="about.html">about</a></li>
           <li><a href="../contact/contact.html">contact</a></li>
         </ul>
