edit about page, upload test resume file

--- a/about/about.html
+++ b/about/about.html
@@ -34,6 +34,14 @@
         <br/>
         Hope you enjoy browsing my work!
       </p> 
+
+      <h2>
+        resume
+      </h2>
+
+      <p>
+        <a href="ResumeTest02.pdf" download>Resume</a>
+      </p> 
     </main>
   </div>
   
